--- a/app/components/vouchers-page/-client/styles.css
+++ b/app/components/vouchers-page/-client/styles.css
@@ -31,12 +31,12 @@
 
 .create-voucher {
   flex-basis: 90px;
+  display: flex;
+  align-items: center;
 }
 
 .button {
   padding: 0 19px;
-  background-color: #EA3D21;
-  color: #fff;
   transition: opacity .3s;
   border-radius: 3px;
   position: relative;
@@ -49,15 +49,45 @@
   height: 30px;
   font-size: 14px;
   white-space: nowrap;
+  background-color: inherit;
 }
 
 .button:hover {
   opacity: .8;
 }
 
-.span {
+.button.blue {
+  border: 1px solid #073E9A;
+  background-color: #0F52C2;
+  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06), 0 1px 0 0 rgba(22,29,37,0.1);
+  color: #fff;
+}
+
+.button.red {
+  background-color: #EA3D21;
+  color: #fff;
+}
+
+.button-text {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
+}
+
+.button-spacer-text {
+  margin-left: 20px;
+  font-size: 14px;
+  color: #130D12;
+}
+
+.voucher-amount {
+  padding: 0 9px 0 0;
+  display: inline-block;
+  font-size: 15px;
+  line-height: 1.2;
+  line-height: 40px;
+  outline: 0;
+  border: none;
   flex-grow: 1;
 }
