Build client search and voucher creation

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,1 +1,15 @@
-{{outlet}}
+<main local-class="main">
+  <section local-class="title">
+    <div local-class="logo">
+      <img src="/images/logo.png" alt="">
+    </div>
+
+    <div local-class="name">
+      <img src="/images/name.png" alt="">
+    </div>
+  </section>
+
+  <section local-class="body">
+    {{outlet}}
+  </section>
+</main>
