--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -6,6 +6,7 @@ html {
 body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  padding: 10px;
+  /*align-items: center;*/
+  /*min-height: 100vh;*/
 }
