--- a/app/components/vouchers-page/styles.css
+++ b/app/components/vouchers-page/styles.css
@@ -1,6 +1,10 @@
+.page {
+  display: flex;
+  flex-direction: column;
+}
+
 .client-search {
   display: flex;
-  box-sizing: content-box;
   height: 52px;
   width: 550px;
   border-radius: 4px;
@@ -31,10 +35,19 @@
   position: relative;
 }
 
-.client-search-results {
+.client-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 550px;
 }
 
-.no-results {
-  text-align: center;
+.result-count {
   margin-top: 20px;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.selected-client {
+  margin-bottom: 20px;
 }
